# News-analyser

./: README.md  pyproject.toml
news-analysis/: article_capture.py  main.py  summary_create.py
news_analysis/: __init__.py  article_capture.py  main.py  summary_create.py  txt_analysis.py
news_analysis/data/: stop_words.txt
tests/: test_article_capture.py
