[tool.poetry]
name = "News-analysis"
version = "0.1.0"
description = "Python tool to search and analyze news artilces"
authors = ["Yanqiao Chen"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
