[tool.poetry]
name = "News-analysis"
version = "0.1.0"
description = "Python tool to search and analyze news artilces"
authors = ["Yanqiao Chen"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
selenium = "^4.2.0"
scikit-learn = "^1.1.1"
nltk = "^3.7"
wordcloud = "^1.8.1"
gensim = "^4.2.0"
pyLDAvis = "^3.3.1"
ipython = "^8.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
requests-testadapter = "^0.3.0"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
